Fixed line breaks in admin dashboard

--- a/admin/jqadm/themes/default/admin.css
+++ b/admin/jqadm/themes/default/admin.css
@@ -119,9 +119,8 @@
 }
 
 .aimeos .list-items a.items-field {
-	display: inline-block;
+	display: inline;
 	color: #333;
-	width: 100%;
 }
 
 .aimeos .list-items .sort-asc:after {
